// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a skeleton representation of a container header 1`] = `
<SkeletonDefaultContainerHeaderInner>
  <Skeleton
    appearance="square"
    size="large"
    weight="strong"
  />
  <HiddenWhenCollapsed
    isCollapsed={false}
  >
    <SkeletonContainerHeaderText />
  </HiddenWhenCollapsed>
</SkeletonDefaultContainerHeaderInner>
`;

exports[`shows a compact version when collapsed 1`] = `
<SkeletonDefaultContainerHeaderInner>
  <Skeleton
    appearance="square"
    size="large"
    weight="strong"
  />
  <HiddenWhenCollapsed
    isCollapsed={true}
  >
    <SkeletonContainerHeaderText />
  </HiddenWhenCollapsed>
</SkeletonDefaultContainerHeaderInner>
`;
